Añadir informaciones al pie de página

--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,12 @@
     animation-iteration-count: infinite;
     animation-direction: alternate; }
 
+footer {
+  background: #343a40;
+  color: #adb5bd; }
+  footer #copyright {
+    background: #212529; }
+
 @media print {
   *,
   *::before,
