Cambiar color primario de la página.

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,5 @@
 // Color System
-$primary: #007bff;
+$primary: #0e9f96;
 
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
